--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT =8080
+USER = user_node_cafe
+PASS = qHOWFQq5ptZrZGcw
+MONGODB_CNN = mongodb+srv://user_node_cafe:qHOWFQq5ptZrZGcw@miclustercafe.gy6bo.mongodb.net/cafeDB
+
+
